--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "untitled",
+  "name": "Inhalert",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/prandell/Inhalert.git"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
