--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/prandell/Inhalert.git"
+    "type": "git",
+    "url": "https://github.com/prandell/Inhalert.git"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +15,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "nodemon": "^2.0.2",
+    "pug": "2.0.0-beta11",
+    "passport": "~0.4.1",
+    "passport-local": "~1.0.0",
+    "bcryptjs": "~2.4.3",
+    "mongoose": "~5.9.9"
   }
 }
