--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devStart": "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/prandell/Inhalert.git"
   },
+
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "~6.4.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.2",
@@ -20,6 +23,13 @@
     "passport": "~0.4.1",
     "passport-local": "~1.0.0",
     "bcryptjs": "~2.4.3",
-    "mongoose": "~5.9.9"
+    "mongoose": "~5.9.9",
+    "body-parser": "latest"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "express-flash": "~0.0.2",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.17.0"
   }
 }
