--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "type": "git",
     "url": "https://github.com/prandell/Inhalert.git"
   },
-
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -27,9 +26,10 @@
     "body-parser": "latest"
   },
   "devDependencies": {
+    "connect-flash": "~0.1.1",
     "dotenv": "^8.2.0",
-    "express-flash": "~0.0.2",
     "express-messages": "^1.0.1",
-    "express-session": "^1.17.0"
+    "express-session": "^1.17.0",
+    "method-override": "^3.0.0"
   }
 }
