--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "passport": "~0.4.1",
     "passport-local": "~1.0.0",
     "bcryptjs": "~2.4.3",
-    "mongoose": "~5.9.9",
-    "body-parser": "latest"
+    "mongoose": "~5.9.9"
   },
   "devDependencies": {
     "connect-flash": "~0.1.1",
