--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 SESSION_SECRET=secret
 DB_URI = mongodb+srv://patrick:Inhalert1@cluster0-shs9r.mongodb.net/test?retryWrites=true&w=majority
+GMAIL_PASSWORD=!nhal3rtAPP
+GMAIL_ADDRESS=inhalert.app@gmail.com
+ENCRYPTION_KEY=Rrp3idsa17gEtIHT1SnUkPWFVlrzLzAR
