sample api call

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SESSION_SECRET=secret
-DB_URI = mongodb+srv://patrick:Inhalert1@cluster0-shs9r.mongodb.net/test?retryWrites=true&w=majority
+DB_URI = mongodb+srv://ABDIAZIZ:9lNx8Ri05oyTgKLs@cluster0-k5uze.mongodb.net/test?retryWrites=true&w=majority
+
+ABDIAZIZ
