--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "connect-flash": "~0.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.0",
