--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "~5.9.9",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "passport": "~0.4.1",
