--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express-messages": "^1.0.1",
-    "express-session": "^1.17.0",
-    "method-override": "^3.0.0"
+    "express-session": "^1.17.0"
   },
   "devDependencies": {
 
