--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_URI = mongodb+srv://patrick:Inhalert1@cluster0-shs9r.mongodb.net/test?retryWr
 GMAIL_PASSWORD=!nhal3rtAPP
 GMAIL_ADDRESS=inhalert.app@gmail.com
 ENCRYPTION_KEY=Rrp3idsa17gEtIHT1SnUkPWFVlrzLzAR
-
+EPA_API_KEY=050c16c08ef84cadb8f92d5d73074b95
