--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devStart": "nodemon ./bin/www"
+    "devStart": "nodemon ./bin/www",
+    "test": "mocha test/**/*.js --exit"
   },
   "repository": {
     "type": "git",
@@ -12,12 +13,18 @@
   },
   "dependencies": {
     "bcryptjs": "~2.4.3",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.17.0",
     "express-validator": "~6.4.0",
     "fetch": "^1.1.0",
     "http-errors": "~1.6.3",
+    "mocha": "^7.2.0",
     "mongoose": "~5.9.9",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
@@ -27,12 +34,12 @@
     "passport-local": "~1.0.0",
     "pug": "2.0.0-beta11",
     "randomstring": "^1.1.5",
-    "request": "^2.88.2",
-    "connect-flash": "~0.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express-messages": "^1.0.1",
-    "express-session": "^1.17.0"
+    "request": "^2.88.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2",
+    "supertest-session": "^4.0.0"
+  }
 }
