--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2",
